FLE2 retryable write breaks if an internal transaction is retried

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.9, 8.1.0-rc0, 8.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Security
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • Security 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      On FLE2 CRUD operations that perform internal transactions (e.g. encrypted inserts), the statement ID is not being reset to the initial value when the internal transaction experiences a transient error, aborts, and retries the transaction.  This creates gaps in the sequence of statement IDs, and thus breaks the idempotency of retryable writes.

            Assignee:
            Erwin Pe
            Reporter:
            Erwin Pe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: