SERVER-88779 FLE2 retryable write breaks if an internal transaction is retried (#20661)

GitOrigin-RevId: eb66519ffb2ac54ae06894c0eeeb77efae639e65